[package]
name = "todo"
version = "0.1.0"
authors = ["ZigTag <GitHub>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grep = "0.2"
ignore = "0.4"
termcolor = "1.1"
clap = "2"
git2 = "0.13"
time = { version = "0.2", default-features = false }